--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   google_nav_bar: 
+  package_info_plus: 
+  shared_preferences:
+  flutter_colorpicker: 
 
 dev_dependencies:
   flutter_test:
