feat: add new investment pages and image picker functionality
- Add GoldPage, FuturesPage, and CryptoCurrencyPage for investment options
- Implement image picker for post creation with tag management
- Update web build configuration to include WASM support
- Add file_selector plugins for cross-platform file selection
- Improve search page UX with auto-focus functionality
- Update app name and description in web manifest

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   package_info_plus: 
   shared_preferences:
   flutter_colorpicker: 
+  image_picker: 
 
 dev_dependencies:
   flutter_test:
