使用依赖注入，初步搭建服务层

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   cached_network_image:
   http:
   json_annotation: ^4.9.0
+  get_it:
+  dio: 
 
 dev_dependencies:
   flutter_test:
